--- a/local.properties
+++ b/local.properties
@@ -4,6 +4,6 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Fri May 31 16:31:17 CST 2019
+#Fri Dec 31 11:45:58 CST 2021
+sdk.dir=C\:\\Users\\420\\AppData\\Local\\Android\\Sdk
 ndk.dir=/Users/baidu/Library/Android/sdk/ndk-bundle
-sdk.dir=/Users/baidu/Library/Android/sdk
